--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,11 @@
-<div class="wrapper">
+<div class="wrapper">      
     <div class="sidebar" data-background-color="white" data-active-color="danger">
+            <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar bar1"></span>
+                    <span class="icon-bar bar2"></span>
+                    <span class="icon-bar bar3"></span>
+            </button>
     	<div class="sidebar-wrapper">
             <ul class="nav">
                 <li routerLinkActive="active">
