--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -135,7 +135,7 @@
                             </div>
                             <div class="item">
                                 <ng-container *ngFor="let i = index; let product of products">
-                                    <div *ngIf="i >=3" class="col-sm-4">
+                                    <div *ngIf="i >=3 && i<6" class="col-sm-4">
                                         <div class="product-image-wrapper">
                                             <div class="single-products">
                                                 <div class="productinfo text-center">
