--- a/src/app/components/dashboard/blog-editor/blog-editor.component.html
+++ b/src/app/components/dashboard/blog-editor/blog-editor.component.html
@@ -136,7 +136,7 @@
                 </div>
            
                 <span>
-                    <button  (click)="addBlog(name.value, description.value,titleDescription.value,shortDescription.value)"
+                    <button  (click)="addBlog(name.value, description.value,titleDescription.value)"
                         class="btn btn-primary" id="submit">
                         Save
                     </button>
