--- a/src/app/components/dashboard/product-editor/product-images/product-images.component.html
+++ b/src/app/components/dashboard/product-editor/product-images/product-images.component.html
@@ -14,7 +14,7 @@
                                 <div class="product-image-wrapper">
                                     <div class="single-products">
                                         <div class="productinfo text-center">
-                                            <img src="{{media.MediaSource}}" alt="" />
+                                            <img src="{{media.MediaSource}}" alt="{{media.Id}}" />
                                             <a href="javascript:void(0)" (click)="deleteMedia(media)" class="btn btn-default add-to-cart">
                                                 <i class="fa fa-trash-o"></i>Delete</a></div>                 
                                     </div>
