--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -35,7 +35,7 @@
 <div class="w3-col l4">
   <!-- About Card -->
   <div class="w3-card w3-margin w3-margin-top">
-  <img src="{{userDetails.ProfilePicture}}" style="width:100%">
+  <img src="{{userDetails.ProfilePicture}}" alt="{{userDetails.FirstName}}" style="width:100%">
     <div class="w3-container w3-white">
       <h4><b>{{userDetails.FirstName}} {{userDetails.LastName}} </b></h4>
       <p>{{userDetails.AboutMe}}</p>
