--- a/src/app/components/dashboard/notification/notification.component.css
+++ b/src/app/components/dashboard/notification/notification.component.css
@@ -1,6 +1,9 @@
 .main-panel .navbar {
     margin-bottom: 0; }     
 
+    .badge{
+      font-size: 10px;
+    }
     .navbar .navbar-nav > li > a i,
     .navbar .navbar-nav > li > a p {
       display: inline-block;
@@ -40,6 +43,9 @@
     .tab-pane .list-group input[type="checkbox"]{ margin-top: 2px; }
     .tab-pane .list-group .glyphicon { margin-right:5px; }
     .tab-pane .list-group .glyphicon:hover { color:#FFBC00; }
+    a.list-group-item{
+      padding-bottom: 2em;
+    }
     a.list-group-item.read { color: #222;background-color: #F3F3F3; }
     hr { margin-top: 5px;margin-bottom: 10px; }
     .nav-pills>li>a {padding: 5px 10px;}
