--- a/src/app/components/dashboard/user/user.component.html
+++ b/src/app/components/dashboard/user/user.component.html
@@ -1,13 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
       <div class="navbar-header">
-          <button type="button" class="navbar-toggle">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar bar1"></span>
-              <span class="icon-bar bar2"></span>
-              <span class="icon-bar bar3"></span>
-          </button>
-          <a class="navbar-brand" href="#">User Profile</a>
+          <a class="navbar-brand" href="javascript:void(0)">User Profile</a>
       </div>      
   </div>
 </nav>
@@ -17,11 +11,11 @@
           <div class="col-lg-4 col-md-5">
               <div class="card card-user">
                   <div class="image">
-                      <img src="{{userDetails.ProfilePicture}}" alt="..."/>
+                      <img src="{{userDetails.ProfilePicture}}" alt="{{userDetails.FirstName}}"/>
                   </div>
                   <div class="content">
                       <div class="author">
-                        <img class="avatar border-white" src="{{userDetails.ProfilePicture}}" alt="..."/>
+                        <img class="avatar border-white" src="{{userDetails.ProfilePicture}}" alt="{{userDetails.FirstName}}"/>
                         <h4 class="title">{{userDetails.FirstName}} {{userDetails.LastName}}<br />
                            <a href="javascript:void(0)"><small>@{{userDetails.FirstName}}{{userDetails.LastName}}</small></a>
                         </h4>
