--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,14 +13,16 @@
                         <ng-container *ngFor="let product of products">
                             <div *ngIf="product.IsMain" [class.active]="product.IsMain && product.IsActive" class="item">
                                 <div class="col-sm-6">
-                                    <h1><span>E</span>-SAMHASHO</h1>
+                                    <img src="{{product.MediaSource}}" class="main-image img-responsive" alt="{{product.Name}}" />
+                                </div>
+                                <div class="col-sm-6">
+                                    <h1>
+                                        <span>E</span>-SAMHASHO</h1>
                                     <h2>{{product.Name}}</h2>
                                     <p>{{product.ShortDescription}}</p>
                                     <button type="button" [routerLink]="['/product-details',product.ProductId]" class="btn btn-default get">View more details</button>
                                 </div>
-                                <div class="col-sm-6">
-                                    <img src="{{product.MediaSource}}" class="main-image img-responsive" alt="" />
-                                </div>
+
                             </div>
                         </ng-container>
                     </div>
@@ -46,31 +48,31 @@
                     <h2>Category</h2>
                     <div class="panel-group category-products" id="accordian">
                         <div class="panel panel-default">
-                            <div class="panel-heading">                              
+                            <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a [class.active-catergory]="catergoryId==0" (click)="loadProducts(0)">All</a>
-                                </h4>                              
+                                </h4>
                             </div>
-                            <div *ngFor="let item of catergories" class="panel-heading">                                 
+                            <div *ngFor="let item of catergories" class="panel-heading">
                                 <h4 class="panel-title">
                                     <a [class.active-catergory]="item.Id == catergoryId" (click)="loadProducts(item.Id)">{{item.Name}}</a>
-                                </h4> 
+                                </h4>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-sm-9 padding-right">
-                <div class="features_items"><!--features_items-->
+                <div class="features_items">
+                    <!--features_items-->
                     <h2 class="title text-center">Features Items</h2>
                     <ng-container *ngFor="let i = index; let product of productsFeature | paginate: { itemsPerPage:9, currentPage:p } | filter:search  ">
                         <div *ngIf="catergoryId != 0">
                             <div class="product-image-wrapper">
                                 <div class="single-products">
                                     <div class="productinfo text-center col-sm-4">
-                                        <img src="{{product.MediaSource}}" alt="" />
+                                        <img src="{{product.MediaSource}}" alt="{{product.Name}}" />
                                     </div>
-                                    <img src="assets/images/home/new.png" class="new" alt="" />
                                     <div class="col-sm-8">
                                         <h2>{{product.Name}}</h2>
                                         <p>${{product.Price}}/{{product.Per}}</p>
@@ -86,7 +88,7 @@
                                 <div class="product-image-wrapper">
                                     <div class="single-products">
                                         <div class="productinfo text-center">
-                                            <img src="{{product.MediaSource}}" alt="" />
+                                            <img src="{{product.MediaSource}}" alt="{{product.Name}}" />
                                             <h2>${{product.Price}}/{{product.Per}}</h2>
                                             <p>{{product.Name}}</p>
                                             <a [routerLink]="['/product-details',product.ProductId]" class="btn btn-default add-to-cart">
@@ -100,12 +102,11 @@
                                                     <i class="fa fa-shopping-cart"></i>View details</a>
                                             </div>
                                         </div>
-                                        <img src="assets/images/home/new.png" class="new" alt="" />
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </ng-container>                   
+                    </ng-container>
                 </div>
                 <pagination-controls (pageChange)="p=$event"></pagination-controls>
                 <!--features_items-->
@@ -121,7 +122,7 @@
                                         <div class="product-image-wrapper">
                                             <div class="single-products">
                                                 <div class="productinfo text-center">
-                                                    <img src="{{product.MediaSource}}" alt="" />
+                                                    <img src="{{product.MediaSource}}" alt="{{product.Name}}" />
                                                     <h2>${{product.Price}}/{{product.Per}}</h2>
                                                     <p>{{product.Name}}</p>
                                                     <a [routerLink]="['/product-details',product.ProductId]" class="btn btn-default add-to-cart">
@@ -139,7 +140,7 @@
                                         <div class="product-image-wrapper">
                                             <div class="single-products">
                                                 <div class="productinfo text-center">
-                                                    <img src="{{product.MediaSource}}" alt="" />
+                                                    <img src="{{product.MediaSource}}" alt="{{product.Name}}" />
                                                     <h2>${{product.Price}}/{{product.Per}}</h2>
                                                     <p>{{product.Name}}</p>
                                                     <a [routerLink]="['/product-details',product.ProductId]" class="btn btn-default add-to-cart">
