--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,6 +1,6 @@
-﻿@import url(http://fonts.googleapis.com/css?family=Roboto:400,300,400italic,500,700,100);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,800,300,600,700);
-@import url(http://fonts.googleapis.com/css?family=Abel);
+﻿@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,400italic,500,700,100);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,800,300,600,700);
+@import url(https://fonts.googleapis.com/css?family=Abel);
 
 body {
   font-family: 'Roboto', sans-serif;
@@ -270,7 +270,7 @@ a#scrollUp i{
 .fixed-header .search_box input {
   background:#FFFFFF;
   color: #B2B2B2;
-  background-image: url(../images/home/searchicon.png);
+  /* background-image: url(../images/home/searchicon.png); */
   background-repeat: no-repeat;
   background-position: 230px;
 }
@@ -285,7 +285,7 @@ a#scrollUp i{
   outline: medium none;
   padding-left: 10px;
   width: 35vmin;
-  background-image: url(../images/home/searchicon.png);
+  /* background-image: url(../images/home/searchicon.png); */
   background-repeat: no-repeat;
   background-position: 230px;
 }
@@ -349,7 +349,7 @@ ul.sub-menu {
   padding-left: 5px; 
 }
 
-@-webkit-keyframes fadeInUp {
+@keyframes fadeInUp {
   0% {
     opacity: 0;
     -webkit-transform: translateY(20px);
@@ -1104,9 +1104,6 @@ h2.title {
   background: #ccccc6;
 }
 
-.recommended_items  h2 {
-}
-
 .our_partners{
   overflow:hidden;
 }
@@ -1472,14 +1469,6 @@ h2.title {
   overflow: hidden;
 }
 
-.login-form {
-
-}
-
-.signup-form {
-
-}
-
 .login-form h2, .signup-form h2 {
   color: #696763;
   font-family: 'Roboto', sans-serif;
@@ -1528,11 +1517,6 @@ h2.title {
   font-family: 'Roboto', sans-serif;
   padding: 6px 25px;
 }
-
-.login-form label{
-
-}
-
 
 .login-form label input {
   border: medium none;
@@ -1679,7 +1663,7 @@ h2.title {
   overflow: hidden;
   text-align: center;
   width: 35px;
-  float: left;
+  /* float: left; */
 }
 
 
@@ -1789,10 +1773,6 @@ h2.title {
   float: left;
   margin-right: 10px
 }
-
-.user_info > li > span {
-}
-
 .user_info input, select, textarea {
   background: #F0F0E9;
   border:0;
@@ -2040,8 +2020,7 @@ h2.title {
   margin-bottom: 17px;
 }
 
-.single-blog-post > a {
-}
+
 
 .blog-post-area 
 .single-blog-post a img {
