--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -45,6 +45,12 @@
                         <p>Notifications </p>
                     </a>
                 </li>
+                <li routerLinkActive="active">
+                    <a [routerLink]="['/dashboard/change-password']">
+                        <i class="fa fa-lock"></i>
+                        <p>Change Password </p>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
