--- a/src/app/components/dashboard/user/user.component.html
+++ b/src/app/components/dashboard/user/user.component.html
@@ -1,120 +1,129 @@
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
-      <div class="navbar-header">
-          <a class="navbar-brand" href="javascript:void(0)">User Profile</a>
-      </div>      
-  </div>
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="javascript:void(0)">User Profile</a>
+        </div>
+    </div>
 </nav>
 <div class="content">
-  <div class="container-fluid">
-      <div class="row">
-          <div class="col-lg-4 col-md-5">
-              <div class="card card-user">
-                  <div class="image">
-                      <img src="{{userDetails.ProfilePicture}}" alt="{{userDetails.FirstName}}"/>
-                  </div>
-                  <div class="content">
-                      <div class="author">
-                        <img class="avatar border-white" src="{{userDetails.ProfilePicture}}" alt="{{userDetails.FirstName}}"/>
-                        <h4 class="title">{{userDetails.FirstName}} {{userDetails.LastName}}<br />
-                           <a href="javascript:void(0)"><small>@{{userDetails.FirstName}}{{userDetails.LastName}}</small></a>
-                        </h4>
-                      </div>
-                 </div>
-               <hr>    
-               <div class="text-center">
-               <button (click)="filesInput.click()" class="btn btn-md btn-success">Change picture</button>
-               <input  #filesInput id="filesInput" (change)="previewImage($event)" type="file" style="display:none" accept="image/*" class="form-control" required>
-               <hr>  
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-4 col-md-5">
+                <div class="card card-user">
+                    <div class="image">
+                        <img src="{{userDetails.ProfilePicture}}" alt="{{userDetails.FirstName}}" />
+                    </div>
+                    <div class="content">
+                        <div class="author">
+                            <img class="avatar border-white" src="{{userDetails.ProfilePicture}}" alt="{{userDetails.FirstName}}" />
+                            <h4 class="title">{{userDetails.FirstName}} {{userDetails.LastName}}
+                                <br />
+                                <a href="javascript:void(0)">
+                                    <small>@{{userDetails.FirstName}}{{userDetails.LastName}}</small>
+                                </a>
+                            </h4>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="text-center">
+                        <button (click)="filesInput.click()" class="btn btn-md btn-success">Change picture</button>
+                        <input #filesInput id="filesInput" (change)="previewImage($event)" type="file" style="display:none" accept="image/*" class="form-control"
+                            required>
+                        <hr>
+                    </div>
+                </div>
             </div>
-             
-              </div>
-          </div>
+            <div class="col-lg-8 col-md-7">
+                <div class="card">
+                    <div class="header">
+                        <h4 class="title">Edit Profile</h4>
+                    </div>
+                    <div class="content">
+                        <form>
+                            <div class="row">
+                                <div class="col-md-5">
+                                    <div class="form-group">
+                                        <label for="name">Username</label>
+                                        <input disabled ngModel #name="ngModel" type="text" name="name" class="form-control border-input" placeholder="Username"
+                                            value="{{userDetails.UserName}}">
+                                    </div>
+                                </div>
+                                <div class="col-md-7">
+                                    <div class="form-group">
+                                        <label for="email">Email address</label>
+                                        <input ngModel #email="ngModel" type="email" name="email" class="form-control border-input" placeholder="Email" value="{{userDetails.Email}}">
+                                    </div>
+                                </div>
+                            </div>
 
-          <div class="col-lg-8 col-md-7">
-              <div class="card">
-                  <div class="header">
-                      <h4 class="title">Edit Profile</h4>
-                  </div>
-                  <div class="content">
-                      <form>
-                          <div class="row">
-                              <div class="col-md-5">
-                                  <div class="form-group">
-                                      <label  for="name">Username</label>
-                                      <input disabled ngModel #name="ngModel" type="text" name ="name" class="form-control border-input" placeholder="Username" value="{{userDetails.UserName}}">
-                                  </div>
-                              </div>
-                              <div class="col-md-7">
-                                  <div class="form-group">
-                                      <label for="email">Email address</label>
-                                      <input ngModel #email="ngModel" type="email" name="email" class="form-control border-input" placeholder="Email" value="{{userDetails.Email}}">
-                                  </div>
-                              </div>
-                          </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="firstname">First Name</label>
+                                        <input ngModel #firstname="ngModel" name="firstname" type="text" class="form-control border-input" placeholder="First name"
+                                            value="{{userDetails.FirstName}}">
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="lastName">Last Name</label>
+                                        <input ngModel #lastName="ngModel" type="text" name="lastName" class="form-control border-input" placeholder="Last name"
+                                            value="{{userDetails.LastName}}">
+                                    </div>
+                                </div>
+                            </div>
 
-                          <div class="row">
-                              <div class="col-md-6">
-                                  <div class="form-group">
-                                      <label  for="firstname">First Name</label>
-                                      <input ngModel #firstname="ngModel" name="firstname" type="text" class="form-control border-input" placeholder="First name" value="{{userDetails.FirstName}}">
-                                  </div>
-                              </div>
-                              <div class="col-md-6">
-                                  <div class="form-group">
-                                      <label for="lastName">Last Name</label>
-                                      <input ngModel #lastName="ngModel" type="text" name ="lastName" class="form-control border-input" placeholder="Last name" value="{{userDetails.LastName}}">
-                                  </div>
-                              </div>
-                          </div>
+                            <div class="row">
+                                <div class="col-md-5">
+                                    <div class="form-group">
+                                        <label for="phonenumber">Phonenumber</label>
+                                        <input ngModel #phonenumber="ngModel" name="phonenumber" type="text" class="form-control border-input" placeholder="Phone number"
+                                            value="{{userDetails.PhoneNumber}}">
+                                    </div>
+                                </div>
+                                <div class="col-md-7">
+                                    <div class="form-group">
+                                        <label for="address">Address</label>
+                                        <input ngModel #address="ngModel" name="address" type="text" class="form-control border-input" placeholder="Home Address"
+                                            value="{{userDetails.Address}}">
+                                    </div>
+                                </div>
+                            </div>
 
-                          <div class="row">
-                              <div class="col-md-5">
-                                  <div class="form-group">
-                                      <label for="phonenumber">Phonenumber</label>
-                                      <input ngModel #phonenumber="ngModel" name ="phonenumber" type="text" class="form-control border-input" placeholder="Phone number" value="{{userDetails.PhoneNumber}}">
-                                  </div>
-                              </div>
-                              <div class="col-md-7">
-                                  <div class="form-group">
-                                      <label for="address">Address</label>
-                                      <input ngModel #address="ngModel" name ="address" type="text" class="form-control border-input" placeholder="Home Address" value="{{userDetails.Address}}">
-                                  </div>
-                              </div>
-                          </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="city">City</label>
+                                        <input ngModel #city="ngModel" name="city" type="text" class="form-control border-input" placeholder="City" value="{{userDetails.City}}">
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="country">Country</label>
+                                        <input ngModel #country="ngModel" name="country" type="text" class="form-control border-input" placeholder="Country" value="{{userDetails.Country}}">
+                                    </div>
+                                </div>
+                            </div>
 
-                          <div class="row">
-                              <div class="col-md-6">
-                                  <div class="form-group">
-                                      <label for="city">City</label>
-                                      <input ngModel #city="ngModel" name="city" type="text" class="form-control border-input" placeholder="City" value="{{userDetails.City}}">
-                                  </div>
-                              </div>
-                              <div class="col-md-6">
-                                  <div class="form-group">
-                                      <label for="country">Country</label>
-                                      <input ngModel #country="ngModel" name="country" type="text" class="form-control border-input" placeholder="Country" value="{{userDetails.Country}}">
-                                  </div>
-                              </div>                             
-                          </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="aboutMe">About Me</label>
+                                        <textarea ngModel #aboutMe="ngModel" name="aboutMe" rows="5" class="form-control border-input" value="{{userDetails.AboutMe}}"
+                                            placeholder="Here can be your description"></textarea>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="text-center">
+                                <button type="submit" (click)="updateUserDetails(aboutMe.value, address.value, city.value, country.value, firstname.value, lastName.value, email.value, phonenumber.value)"
+                                    class="btn btn-lg btn-success">Update Profile</button>
+                            </div>
+                            <div class="clearfix"></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
 
-                          <div class="row">
-                              <div class="col-md-12">
-                                  <div class="form-group">
-                                      <label for="aboutMe">About Me</label>
-                                      <textarea ngModel #aboutMe="ngModel" name="aboutMe" rows="5" class="form-control border-input" value="{{userDetails.AboutMe}}" placeholder="Here can be your description"></textarea>
-                                  </div>
-                              </div>
-                          </div>
-                          <div class="text-center">
-                              <button type="submit" (click)="updateUserDetails(aboutMe.value, address.value, city.value, country.value, firstname.value, lastName.value, email.value, phonenumber.value)" class="btn btn-lg btn-success">Update Profile</button>
-                          </div>
-                          <div class="clearfix"></div>
-                      </form>
-                  </div>
-              </div>
-          </div>
-          
-      </div>
+        </div>
     </div>
-  </div>
+</div>
